--- a/css/sismotur.css
+++ b/css/sismotur.css
@@ -139,9 +139,9 @@ button#btn-ribera{position: relative; text-align:center; width:40%; height:50px;
 	div.tecnol {
 		position:relative;
 		float:left;
-		margin-left:10%;
+		margin-left:8%; /* before 10% , corrige descuadre Manuel */
 		margin-top:10%;
-		width:20%;
+		width:23%; /* before 20%, corrige descuadre Manuel */
 		height:500px;
 	}
 
